@@ -27,6 +27,7 @@ module Ci
       end
 
       pipeline.save!
+      pipeline.touch
 
       unless pipeline.create_builds(current_user)
         pipeline.errors.add(:base, 'No builds for this pipeline.')
